--- a/springBoot/SpringBoot_05/src/main/resources/application.properties
+++ b/springBoot/SpringBoot_05/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 #JPA setting
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=false
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
